# transit-time

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  todo.md
.cargo/: config.toml
.github/workflows/: deploy.yml  format.yml
cities/: berlin.jsonc  bogota.jsonc  boston.jsonc  calgary.jsonc  chapel_hill.json  chapel_hill.jsonc  chicago.json  chicago.jsonc  hong_kong.jsonc  london.jsonc  los_angeles.jsonc  madrid.jsonc  mexico_city.jsonc  montreal.jsonc  moscow.jsonc  nyc.json  nyc.jsonc  ottawa.jsonc  paris.jsonc  philadelphia.jsonc  seattle.json  seattle.jsonc  sf_bay.jsonc  tokyo.jsonc  toronto.json  toronto.jsonc  vancouver.jsonc  washington_dc.jsonc  waterloo.json  waterloo.jsonc
scripts/: flamegraph.sh  samply.sh  sizes.py
transit-prep/: Cargo.toml
transit-prep/src/: binary.rs  download.rs  graph.rs  gtfs.rs  lib.rs  main.rs  mdb.rs  osm.rs  transitland.rs
transit-prep/tests/: integration_test.rs
transit-router/: Cargo.toml
transit-router/.cargo/: config.toml
transit-router/src/: data.rs  lib.rs  path_display.rs  profile.rs  router.rs  sssp_path.rs
transit-router/tests/: chicago_test.rs  integration_test.rs  profile_router.rs  routing_test.rs  trip_follow_test.rs
transit-viz/: .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
transit-viz/src/: App.jsx  App.tsx  cities.js  cities.ts  main.js  main.tsx  styles.css
transit-viz/src/components/: CitySelect.jsx  CitySelect.tsx  Controls.jsx  Controls.tsx  ControlsBody.tsx  HoverInfo.jsx  HoverInfo.tsx  Legend.jsx  Legend.tsx  LoadingOverlay.jsx  LoadingOverlay.tsx  LocationSearch.tsx  MapView.jsx  MapView.tsx  MobileBottomSheet.tsx  MobileSettingsSheet.tsx  MobileTopBar.tsx  PathSegmentList.tsx
(+20 files in other folders)
