[package]
name = "transit-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
flate2 = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rayon = "1.10"
wasm-bindgen-rayon = "1.2"

[dev-dependencies]
transit-prep = { path = "../transit-prep" }
