[package]
name = "transit-router"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
pco = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rayon = "1.10"
wasm-bindgen-rayon = "1.2"
console_error_panic_hook = "0.1.7"
radix-heap = "0.4.2"

[dev-dependencies]
transit-prep = { path = "../transit-prep" }
flate2 = "1"
